--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   jekyll:
     image: jekyll/jekyll:latest
-    command: jekyll serve --watch --livereload force_polling
+    command: jekyll serve --watch --livereload
     ports:
       - 4000:4000
       - 35729:35729
