--- a/_i18n/pt.yml
+++ b/_i18n/pt.yml
@@ -166,3 +166,7 @@ resume:
       storytelling: Storytelling
       detail: Detalhista
       business_acumen: Visão de Negócio
+
+post:
+  minutes_to_read: minutos de leitura
+  you_may_also_like: Você também pode gostar
