--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Optimize CSS 🪚
         run: |
           sudo chmod -R 777 _site
+          npm run purgeCss
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
