--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -7,7 +7,7 @@ on:
       - main
       - master
   workflow_run:
-    workflows: ["Auto feed creator", "Generate webp", "Generate short_link"]
+    workflows: ["Auto feed creator"]
     types:
       - completed
 
