--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,11 @@
   "configurations": [
     {
       "type": "node",
-      "request": "attach",
-      "name": "Docker: Attach to Node",
-      "remoteRoot": "/srv/jekyll",
-      "preLaunchTask": "compose-up"
-    }
+      "request": "launch",
+      "name": "Launch Dev",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/node_modules/.bin/next",
+      "args": ["start"]
+    },
   ]
 }
