--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,109 +1,111 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-#
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
-#
 name: Deploy Next.js site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
   generate_webp:
-    name: calibreapp/image-actions
+    name: Generate WebP and Thumbnails
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2
+      - name: Checkout Repository 🛎️
+        uses: actions/checkout@v4
 
-      - name: Generate Webp 🖼️
+      - name: Set up Python 🐍
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x" # Usa a versão mais recente do Python 3
+
+      - name: Install Pillow 📦
+        run: |
+          python -m pip install --upgrade pip
+          pip install pillow
+
+      - name: Generate WebP Images 🖼️
         run: |
           python scripts/create_webp.py
           python scripts/create_thumbnails.py
 
-      - name: Commit Images 🚀
+      - name: Commit Generated Images 🚀
         uses: EndBug/add-and-commit@v7
         with:
-          message: "Auto Generated webp"
-  # Build job
+          message: "Auto-generated WebP and thumbnails"
+          add: "./public/images" # Adiciona apenas as imagens geradas/alteradas
+
   build:
+    name: Build Next.js Site
     runs-on: ubuntu-latest
+    needs: generate_webp # Garante que o job generate_webp seja executado primeiro
     steps:
-      - name: Checkout
+      - name: Checkout Repository 🛎️
         uses: actions/checkout@v4
-      - name: Detect package manager
+
+      - name: Detect Package Manager 🔍
         id: detect-package-manager
         run: |
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
           elif [ -f "${{ github.workspace }}/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
           else
             echo "Unable to determine package manager"
             exit 1
           fi
-      - name: Setup Node
+
+      - name: Set up Node.js 🟢
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-      - name: Setup Pages
+
+      - name: Set up GitHub Pages 📄
         uses: actions/configure-pages@v5
         with:
-          # Automatically inject basePath in your Next.js configuration file and disable
-          # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
-          # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
-      - name: Restore cache
+
+      - name: Restore Cache 🗄️
         uses: actions/cache@v4
         with:
           path: |
             .next/cache
-          # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Install dependencies
+
+      - name: Install Dependencies 📦
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js
+
+      - name: Build Next.js Project 🏗️
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: Upload artifact
+
+      - name: Upload Artifact 📤
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
 
-  # Deployment job
   deploy:
+    name: Deploy to GitHub Pages
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v4
