--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Python 🐍
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x" # Usa a versão mais recente do Python 3
+          python-version: "3.x"
 
       - name: Install Pillow 📦
         run: |
@@ -41,12 +41,12 @@ jobs:
         uses: EndBug/add-and-commit@v7
         with:
           message: "Auto-generated WebP and thumbnails"
-          add: "./public/images" # Adiciona apenas as imagens geradas/alteradas
+          add: "./public/images"
 
   build:
     name: Build Next.js Site
     runs-on: ubuntu-latest
-    needs: generate_webp # Garante que o job generate_webp seja executado primeiro
+    needs: generate_webp
     steps:
       - name: Checkout Repository 🛎️
         uses: actions/checkout@v4
