--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "bulma": "0.9.0",
+    "font-awesome": "^4.7.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
     "markdown-to-jsx": "^7.4.7",
