--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "react-to-pdf": "^1.0.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "express": "^4.19.2",
     "husky": "^9.0.11",
+    "postcss": "^8.5.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.1.4",
     "sass": "^1.77.4",
     "typescript": "^5"
   }
