--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "highlight.js": "^11.9.0",
     "markdown-to-jsx": "^7.4.7",
     "marked": "^12.0.2",
-    "next": "14.2.3",
+    "next": "^14.2.24",
     "react": "^18",
-    "react-dom": "^18",
-    "react-to-pdf": "^1.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -32,10 +30,6 @@
     "eslint-config-next": "14.2.3",
     "express": "^4.19.2",
     "husky": "^9.0.11",
-    "postcss": "^8.5.3",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.4",
     "sass": "^1.77.4",
     "typescript": "^5"
   }
