--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -64,6 +64,9 @@ jobs:
       - name: Build Next.js Project 🏗️
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
 
+      - name: PurgeCSS 🧹
+        run: ${{ steps.detect-package-manager.outputs.runner }} npm run purgecss
+
       - name: Upload Artifact 📤
         uses: actions/upload-pages-artifact@v3
         with:
